--- a/buka dong.html
+++ b/buka dong.html
@@ -15,7 +15,7 @@ background-repeat: no-repeat;
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuM3rioW316CtTo_jJ7swvNiMEL7L5GLu8upEPWwDWEb24gT4bNOyZwDTTfwYLy_Ixhi0&usqp=CAU" height="200"/>
 
-<h1 style="#" >MAU GA JADI PACAR YETI</h1>
+<h1 style="#" >MAU GA JADI PACAR ANO</h1>
 
 <div id="By" style="position:absolute; left:64px; top:370px; width:210px; height:210px;">
 <input type="button" value=" MAU " onClick="A1()" />
